--- a/apps/web/src/components/BlocksNav.astro
+++ b/apps/web/src/components/BlocksNav.astro
@@ -2,7 +2,7 @@
 import { getCollection, getEntry, render } from "astro:content";
 import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 import BlockPreview from "@/components/BlockPreview.astro";
-import Button from "@bejamas/ui/components/Button.astro";
+import { Button } from "@bejamas/ui/components/button";
 
 const blocks = await getCollection("blocks");
 
