--- a/apps/web/src/pages/blocks/footers/footer-1/components/cta.astro
+++ b/apps/web/src/pages/blocks/footers/footer-1/components/cta.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@bejamas/ui/components/Button.astro";
+import { Button } from "@bejamas/ui/components/button";
 ---
 
 <div
