--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -30,16 +30,14 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
               fill="#17191E"
             />
           </svg>
-          Astro for high-performance, multi-market content platforms. Components
-          live in your codebase.
+          Astro, with copy-and-own code and 
           <a
             href="/docs/auto-generated-docs"
-            class="border-b border-muted-foreground/40 hover:text-foreground relative pr-4 pb-0.5 hover:border-muted-foreground/80 transition-colors group"
+            class="border-b border-muted-foreground/40 hover:text-foreground relative pb-0.5 hover:border-muted-foreground/80 transition-colors group"
           >
-            Docs are generated automatically
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide group-hover:translate-x-0.5 group-hover:-translate-y-0.5 transition-transform ease-in-out duration-200 lucide-arrow-up-right-icon lucide-arrow-up-right inline-block size-4 absolute right-0 top-1"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>
-          </a>
-          .
+            auto-generated component docs
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide group-hover:translate-x-0.5 group-hover:-translate-y-0.5 transition-transform ease-in-out duration-200 lucide-arrow-up-right-icon lucide-arrow-up-right inline-block size-4"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>
+          </a> — letting teams scale content platforms instead of maintaining UI systems.
       `,
       actions: [
         {
@@ -79,7 +77,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
   .hero h1 {
     letter-spacing: calc(var(--letter-spacing) - 0.025em);
-    @apply text-3xl font-medium text-left text-balance block max-w-2xl leading-[1.15];
+    @apply text-3xl font-medium text-left text-balance block max-w-xl leading-[1.15];
   }
 
   .kudos {
@@ -93,7 +91,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   .tagline {
     text-align: left;
     font-size: 1.1875rem;
-    max-width: 56ch;
+    max-width: 50ch;
   }
 
   @media (min-width: 48rem) {
