fix(ui): get data-slot from npm

--- a/packages/ui/src/components/accordion/Accordion.astro
+++ b/packages/ui/src/components/accordion/Accordion.astro
@@ -111,7 +111,7 @@ const {
 </Tag>
 
 <script>
-  import { createAccordion } from "headless-vanilla-ui/dist/accordion";
+  import { createAccordion } from "@data-slot/accordion";
 
   document.querySelectorAll('[data-slot="accordion"]').forEach((el) =>
     createAccordion(el, {
