--- a/packages/ui/src/components/dialog/Dialog.astro
+++ b/packages/ui/src/components/dialog/Dialog.astro
@@ -143,7 +143,7 @@ const {
 </div>
 
 <script>
-  import { createDialog } from "headless-vanilla-ui/packages/dialog/dist/index.js";
+  import { createDialog } from "@data-slot/dialog";
 
   document.querySelectorAll('[data-slot="dialog"]').forEach((el) =>
     createDialog(el, {
